--- a/views/cloudplay/sub4.html
+++ b/views/cloudplay/sub4.html
@@ -26,7 +26,7 @@
       <p class="info mb-1">CloudPlay adalah layanan berlangganan. Anda akan dikenakan biaya Rp 16,650/SMS, 1 SMS/30 hari
         pada tagihan ponsel Anda dan akan diperbarui secara otomatis.</p>
       <p class="info mb-0">Untuk membatalkankan, ketik UNREG CLOUDPLAY4 kirim ke 97770. Dengan klik tombol, Anda telah
-        setuju dengan <a class="text-danger" href="term.html">syarat dan ketentuan</a></p>
+        setuju dengan <a class="text-danger" href="/cloudplay/term">syarat dan ketentuan</a></p>
       <img class="mt-3" src="static/cloudplay/img/logo.png" alt="Logo" width="100" style="width: 100px; height: auto;">
     </div>
 
