--- a/views/cloudplay/sub.html
+++ b/views/cloudplay/sub.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="static/cloudplay/css/mdb.min.css">
-  <link rel="stylesheet" href="static/cloudplay/style.css">
+  <link rel="stylesheet" href="{{ .host }}/static/cloudplay/css/mdb.min.css">
+  <link rel="stylesheet" href="{{ .host }}/static/cloudplay/style.css">
   <title>Cloudplay</title>
 </head>
 
@@ -26,7 +26,7 @@
       <p class="info mb-1">CloudPlay adalah layanan berlangganan. Anda akan dikenakan biaya Rp 2,200/SMS, 1 SMS/2 hari
         pada tagihan ponsel Anda dan akan diperbarui secara otomatis.</p>
       <p class="info mb-0">Untuk membatalkankan, ketik UNREG CLOUDPLAY kirim ke 97770. Dengan klik tombol, Anda telah
-        setuju dengan <a class="text-danger" href="term.html">syarat dan ketentuan</a></p>
+        setuju dengan <a class="text-danger" href="/cloudplay/term">syarat dan ketentuan</a></p>
       <img class="mt-3" src="static/cloudplay/img/logo.png" alt="Logo" width="100" style="width: 100px; height: auto;">
     </div>
 
@@ -34,7 +34,7 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="static/cloudplay/js/mdb.min.js"></script>
+  <script src="{{ .host }}/static/cloudplay/js/mdb.min.js"></script>
   <script>
     $(document).ready(function () {
 
