--- a/views/cloudplay/sub4.html
+++ b/views/cloudplay/sub4.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="mx-auto box-wrapper banner">
-    <img src="static/cloudplay/img/banner.png" alt="Banner" class="img-fluid">
+    <img src="static/cloudplay/img/banner.jpg" alt="Banner" class="img-fluid">
   </div>
   <div class="container-fluid box-wrapper text-center pb-3">
     <h3 class="mb-1 title">Mainkan Game Terbaik Sekarang!</h3>
