--- a/views/cloudplay/sub.html
+++ b/views/cloudplay/sub.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="mx-auto box-wrapper banner">
+  <div class="mx-auto box-wrapper banner mb-3">
     <img src="static/cloudplay/img/banner.jpg" alt="Banner" class="img-fluid">
   </div>
   <div class="container-fluid box-wrapper text-center pb-3">
