--- a/views/mplus/faq.html
+++ b/views/mplus/faq.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MPlus</title>
-    <link rel="stylesheet" href="{{ .app_url }}/static/mplus/css/style.css" />
+    <link rel="stylesheet" href="{{ .host }}/static/mplus/css/style.css" />
   </head>
   <body>
     <div class="content">
       <div class="detail-bottom">
         <div class="container">
-          <a href="{{ .app_url }}/p/mplus">
-            <img src="{{ .app_url }}/static/mplus/img/icon-arrow.svg" class="icon-back" alt="" />
+          <a href="{{ .host }}/p/mplus">
+            <img src="{{ .host }}/static/mplus/img/icon-arrow.svg" class="icon-back" alt="" />
           </a>
           <h5 class="title-pages">FAQ</h5>
           <p class="faq-text">
