--- a/views/cloudplay/sub.html
+++ b/views/cloudplay/sub.html
@@ -8,11 +8,16 @@
   <link rel="stylesheet" href="{{ .host }}/static/cloudplay/css/mdb.min.css">
   <link rel="stylesheet" href="{{ .host }}/static/cloudplay/style.css">
   <title>Cloudplay</title>
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','{{ .gtag }}');</script>
 </head>
 
 <body>
   <div class="mx-auto box-wrapper banner mb-3">
-    <img src="static/cloudplay/img/banner.jpg" alt="Banner" class="img-fluid">
+    <img src="{{ .host }}/static/cloudplay/img/banner.jpg" alt="Banner" class="img-fluid">
   </div>
   <div class="container-fluid box-wrapper text-center pb-3">
     <h3 class="mb-1 title">Mainkan Game Terbaik Sekarang!</h3>
@@ -26,8 +31,8 @@
       <p class="info mb-1">CloudPlay adalah layanan berlangganan. Anda akan dikenakan biaya Rp 2,220/SMS, 1 SMS/2 hari
         pada tagihan ponsel Anda dan akan diperbarui secara otomatis.</p>
       <p class="info mb-0">Untuk membatalkankan, ketik UNREG CLOUDPLAY kirim ke 97770. Dengan klik tombol, Anda telah
-        setuju dengan <a class="text-danger" href="/cloudplay/term">syarat dan ketentuan</a></p>
-      <img class="mt-3" src="static/cloudplay/img/logo.png" alt="Logo" width="100" style="width: 100px; height: auto;">
+        setuju dengan <a class="text-danger" href="{{ .host }}/cloudplay/term">syarat dan ketentuan</a></p>
+      <img class="mt-3" src="{{ .host }}/static/cloudplay/img/logo.png" alt="Logo" width="100" style="width: 100px; height: auto;">
     </div>
 
   </div>
