--- a/views/cloudplay/sub.html
+++ b/views/cloudplay/sub.html
@@ -8,11 +8,34 @@
   <link rel="stylesheet" href="{{ .host }}/static/cloudplay/css/mdb.min.css">
   <link rel="stylesheet" href="{{ .host }}/static/cloudplay/style.css">
   <title>Cloudplay</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{ .gtag }}"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments)};
+    gtag('js', new Date());
+    gtag('config', '{{ .gtag }}');
+  </script>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','{{ .gtag }}');</script>
+  <script> 
+  function gtag_report_conversion(url) {
+    var callback = function() {
+      if (typeof(url) != 'undefined') {
+          window.location = url;
+      }
+    };
+    gtag('event', 'conversion', {
+        'send_to': '{{ .gtag }}',
+        'value': 1.0,
+        'currency': 'IDR',
+        'event_callback': callback
+    });
+    return false;
+  }
+  </script> 
 </head>
 
 <body>
@@ -99,6 +122,7 @@
           contentType: "application/json; charset=utf-8",
           success: function (json) {
             if (json.error == false) {
+              gtag_report_conversion(json.redirect)
               window.location.href = json.redirect;
             }
             $('#loading').hide();
