--- a/views/cloudplay/sub1.html
+++ b/views/cloudplay/sub1.html
@@ -74,7 +74,7 @@
         var aff_sub = "";
 
         keyword = getUrlParameter("keyword");
-        sub_keyword = getUrlParameter("sub_keyword");
+        sub_keyword = getUrlParameter("subkey");
         adnet = getUrlParameter('ad');
         pubid = getUrlParameter('pubid');
         aff_sub = getUrlParameter('aff_sub');
