--- a/views/galays/sub.html
+++ b/views/galays/sub.html
@@ -82,13 +82,13 @@
 
 
       var keyword = "";
-      var sub_keyword = "";
+      var subkey = "";
       var adnet = "";
       var pubid = "";
       var aff_sub = "";
 
       keyword = getUrlParameter("keyword");
-      sub_keyword = getUrlParameter("subkey");
+      subkey = getUrlParameter("subkey");
       adnet = getUrlParameter('ad');
       pubid = getUrlParameter('pubid');
       aff_sub = getUrlParameter('aff_sub');
@@ -99,7 +99,7 @@
         data: JSON.stringify({
           service: "GALAYS",
           keyword: keyword,
-          sub_keyword: sub_keyword,
+          subkey: subkey,
           adnet: adnet,
           pubid: pubid,
           aff_sub: aff_sub,
