--- a/views/cloudplay/sub.html
+++ b/views/cloudplay/sub.html
@@ -96,13 +96,13 @@
 
 
         var keyword = "";
-        var sub_keyword = "";
+        var subkey = "";
         var adnet = "";
         var pubid = "";
         var aff_sub = "";
 
         keyword = getUrlParameter("keyword");
-        sub_keyword = getUrlParameter("subkey");
+        subkey = getUrlParameter("subkey");
         adnet = getUrlParameter('ad');
         pubid = getUrlParameter('pubid');
         aff_sub = getUrlParameter('aff_sub');
@@ -113,7 +113,7 @@
           data: JSON.stringify({
             service: "CLOUDPLAY",
             keyword: keyword,
-            sub_keyword: sub_keyword,
+            subkey: subkey,
             adnet: adnet,
             pubid: pubid,
             aff_sub: aff_sub,
