--- a/views/gupi/sub.html
+++ b/views/gupi/sub.html
@@ -33,7 +33,7 @@
         <div class="card card-custom text-dark mb-4">
           <form class="card-body content">
             <h3 class="title mb-4g">
-             Mainkan Game Terbaik Sekarang!
+              Mainkan Game Terbaik Sekarang!
             </h3>
             <button id="subscribe" class="btn button btn-lg w-100 rounded-pill">
                 Mainkan Sekarang
@@ -45,10 +45,10 @@
         </div>
         <div class="term">
             <p class="mb-0">
-                Gupi adalah layanan berlangganan. Anda akan dikenakan biaya Rp 2,220/SMS, 1 SMS/2 hari pada tagihan ponsel Anda dan akan diperbarui secara otomatis.
+              Gupi adalah layanan berlangganan. Anda akan dikenakan biaya Rp 2,220/SMS, 1 SMS/2 hari pada tagihan ponsel Anda dan akan diperbarui secara otomatis.
             </p>
             <p>
-                Untuk membatalkankan, ketik UNREG GUPI kirim ke 97770.
+              Untuk membatalkankan, ketik UNREG GUPI kirim ke 97770. Dengan klik tombol, Anda telah setuju dengan <a class="text-danger" href="{{ .host }}/p/gupi/term">syarat dan ketentuan</a>.
             </p>
         </div>
       </div>
